Fix: Make plant-preview multi-value characters easier to read.
All mutiple-value characters now have lists behind them. Some are
presented compactly with commas, others as bulleted lists.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2026 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -42,9 +42,8 @@
                         <h4>Habitat</h4>
                         <p class="habitat"></p>
 						<h4>Characteristics</h4>
-						<ul>
-                            <li>CHARACTER: Value</li>
-						</ul>
+						<div class="characteristics">
+                        </div>
 						<a class="get-more-info"></a>
 					</div>
 					<div class="clearit"></div>
