Make the 'data coming soon' note on full-key species pages more prominent.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2036 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -28,12 +28,13 @@
     {% include "simplekey/_header.html" %}
 
     <div class="content">
+        {% if not in_simple_key %}
+            <div class="note">This is a species in our Full Key.
+            Complete data are coming soon.</div>
+        {% endif %}
+
         <div class="container">
             <div id="main">
-                {% if not in_simple_key %}
-                    <p class="note">This is a species in our Full Key.
-                    Complete data are coming soon.</p>
-                {% endif %}
 
                 {# TODO: After implementing Full Key and navigation, #}
                 {# show appropriate breadcrumb links.                #}
