Removed sorl-thumbnail from the project.  Went with predictable thumbnail URLs.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2044 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -38,10 +38,10 @@
                                     {% for pile_image in pile_images %}
                                         {% with pile_image.content_image as i %}
                                             {% with i.creator as photographer %}
-                                            <a href="{{ i.image_medium.url }}"
+                                            <a href="{{ i.image_medium }}"
                                                 rel="shadowbox[{{ pilegroup.slug }}]"
                                                 title="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
-                                                <img src="{{ i.thumb_large.url }}"
+                                                <img src="{{ i.thumb_large }}"
                                                     alt="{% photo_title_credit i.image_type i.content_object.scientific_name photographer %}">
                                             </a>
                                             {% endwith %}
