--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -72,10 +72,10 @@
                         <div class="scrollableArea">
                             {% for i in species_images %}
                                 {% with i.creator as photographer %}
-                                <a href="{{ i.image_medium.url }}"
+                                <a href="{{ i.image_medium }}"
                                     {% if forloop.counter == 1 %}id="startimage"{% endif %}
                                     title="{% photo_title_credit i.image_type scientific_name photographer %}">
-                                    <img src="{{ i.thumb_large.url }}"
+                                    <img src="{{ i.thumb_large }}"
                                         alt="{% photo_title_credit i.image_type scientific_name photographer %}">
                                 </a>
                                 {% endwith %}
