--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -47,13 +47,13 @@ Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}
                     {% for drawing in family_drawings %}
                         <div>
                             <a rel="shadowbox"
-                               href="{{ drawing.image_medium.url }}">
+                               href="{{ drawing.image_medium }}">
                                 <img class="map"
-                                    src="{{ drawing.thumb_small.url }}"
+                                    src="{{ drawing.thumb_small }}"
                                     alt="{{ drawing.alt }}"></a>
                             <p>{{ drawing.alt }}</p>
                             <a class="enlarge" rel="shadowbox"
-                                href="{{ drawing.image_medium.url }}">
+                                href="{{ drawing.image_medium }}">
                                 <img class="zoom"
                                 src="/static/images/icons/zoom.png"
                                 alt="enlarge"></a>
