--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -23,7 +23,7 @@
                     <div class="img-container">
                         {% for i in group.sample_species_images.all %}
                             {% if forloop.first %}
-                                <img src="{{ i.thumb_small.url }}"
+                                <img src="{{ i.thumb_small }}"
                                     alt="{{ i.alt }}">
                             {% endif %}
                         {% endfor %}
@@ -47,7 +47,7 @@
                             <div class="img-container">
                                 {% for i in subgroup.sample_species_images.all %}
                                     {% if forloop.first %}
-                                        <img src="{{ i.thumb_small.url }}"
+                                        <img src="{{ i.thumb_small }}"
                                             alt="{{ i.alt }}">
                                     {% endif %}
                                 {% endfor %}
