--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,7 +1,5 @@
 {% extends "simplekey/_new_base.html" %}
 
-{% load thumbnail %}
-
 {% block title %}Go Botany: New England Wild Flower Society{% endblock %}
 {% block title_suffix %}{% endblock %}
 
@@ -79,12 +77,10 @@
 
                 <div id="potd">
                     {% if plant_of_the_day %}
-                      {% thumbnail plant_of_the_day_image.image "270x131" crop="center" as im %}
                         <a href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/"
                             title="Learn more about {{ plant_of_the_day.scientific_name }}">
-                            <img src="{{ im.url }}"
-                                alt="{{ plant_of_the_day.scientific_name }}"
-                                height="131" width="270">
+                          <img src="{{ plant_of_the_day_image.thumb_large }}"
+                               alt="{{ plant_of_the_day.scientific_name }}">
                         </a>
                         <div class="details">
                             <a class="subscribe"
@@ -98,7 +94,6 @@
                             <p>{{ plant_of_the_day.factoid|slice:":274"}}
                             {% if plant_of_the_day.factoid|length > 274 %}...{% endif %}</p>
                             <a class="learn-more" href="/species/{{ plant_of_the_day.genus_name|lower }}/{{ plant_of_the_day.epithet }}/">Learn More</a>
-                      {% endthumbnail %}
                     {% else %}
                         <p>Error: Plant of the Day information
                         missing</p>
