Tweaked the layout of the plant-of-the-day thumbnail.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2046 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -312,9 +312,12 @@ div#potd {
 	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 }
-#potd img {
+#potd > a {
 	float: left;
 	margin: 0 15px 0 0;
+	width: 270px;
+	height: 131px;
+	overflow: hidden;
 }
 #potd .details {
     margin: 0 0 0 285px;
