--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -312,11 +312,18 @@ div#potd {
 	-moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 	-webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
 }
+#potd > a {
+    display: block;
+    float: left;
+    height: 131px;
+    margin: 0 15px 0 0;
+    overflow: hidden;
+    width: 270px;
+}
 #potd > a img {
-	float: left;
-	margin: 0 15px 0 0;
+    position: relative;
+    top: -60px;
 	width: 270px;
-	height: 131px;
 }
 #potd .details {
     margin: 0 0 0 285px;
