On IE 6-9, show a banner saying that Chrome Frame or another browser is required.
Also, hide the 'DRAFT' banner, which should be OK now that the site requires authorization.

git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2070 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -1,6 +1,7 @@
-<div id="notify">
+{# Disabled during Chrome Frame testing. TODO: Remove before launch. #}
+<!--<div id="notify">
     <div>DRAFT: This web site is under development.</div>
-</div>
+</div>-->
 
     <header>
         <div class="container">
