Tweak layout of IE Chrome Frame note banner after testing in IE.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2071 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -2551,8 +2551,8 @@ nav #search-suggest .menu a:hover, #search-suggest .menu li:hover {
 #ie-note {
     background: #000;
     color: #fff;
-    font-size: 120%;
-    padding: 1em 0;
+    font-size: 14px;
+    padding: 16px 0;
     text-align: center;
     width: 100%;
 }
@@ -2565,10 +2565,10 @@ nav #search-suggest .menu a:hover, #search-suggest .menu li:hover {
     text-decoration: underline;
 }
 #ie-note img {
-    clip: rect(0px,255px,94px,0px);
+    clip: rect(0px,255px,104px,0px);
     overflow: hidden;
     position: absolute;
-    top: -20px;
+    top: -24px;
     z-index: 1;
     opacity: 0.5;
     filter:alpha(opacity=50); /* For IE8 and earlier */
