Tweak alignment of home page Get Started button to better center it.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2072 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -238,7 +238,7 @@ body#home #top-wrapper {
 #banner a#cta {
 	display: block;
 	height: 41px;
-	margin: 21px auto 0;
+	margin: 21px 2px 0;
 	background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent;	
 	text-indent: -9000px;
 }
