--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -31,7 +31,7 @@
                             alt="Go Botany">
                         <p>Want to know what that plant is? With our
                         Simple Key, you can identify over
-                        1,200 of the most common native and naturalized
+                        1,200 common native and naturalized
                         New England plants! Observe closely, collect a
                         sample or take a photo, answer some questions,
                         and hone in on the correct identification.</p>
