Remove an invalid video link for now.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2076 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -76,11 +76,10 @@
                         <h5><a href="{% url simplekey-help-video %}">Video Help Topics</a></h5>
                     </div>
                     <div class="section">
-                        <h5>Watch Video</h5>
-                        <a href="http://www.youtube.com/v/VWDc9oyBj5Q"
-                            rel="shadowbox;height=380;width=640;" title="Title
-                            of the video can go here"><img class="shadow"
-                            src="/static/images/layout/video-screenshot.jpg" /></a>
+                        <h5>
+                            Watch Video<br />
+                            (video coming soon)
+                        </h5>
                         <p>How to use the Go Botany Plant Identifier</p>
                     </div>
                 </div>
