Hook "Learn More" buttons into appropriate pages.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2077 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -48,7 +48,7 @@
                     share your discoveries, get help identifying plants,
                     make maps, and develop checklists of plants for
                     particular sites you are exploring.</p>
-                    <a class="learn-more">Learn More</a>
+                    <a class="learn-more" href="{% url plantshare-placeholder %}">Learn More</a>
                 </div>
 
                 <div class="three-col">
@@ -70,7 +70,8 @@
                     in botany for science students and beginning and amateur
                     botanists. Professors, teachers, and environmental
                     educators can share curricula and teaching ideas.</p>
-                    <a class="learn-more" href="#">Learn More</a>
+                    <a class="learn-more" href="{% url teaching-tools-placeholder %}"
+                        >Learn More</a>
                 </div>
 
                 <div class="clearit"></div>
