Story 245: Add Subspecies and Variety Notes.
Conditionally display variety_notes field if non-empty, and allow for
HTML tags within the field text.

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -320,6 +320,13 @@
                     <p><em><a href="{% url simplekey-genus taxon.genus.slug %}"
                         >{{ taxon.genus }}</a></em></p>
                 </div>
+
+                {% if taxon.variety_notes %}
+                <div class="section">
+                    <h5>Notes on Subspecies and Varieties:</h5>
+                    <p>{{ taxon.variety_notes|safe }}</p>
+                </div>
+                {% endif %}
                 
                 <div class="section">
 				    <h5 class="left help">Need Help?</h5>
