Fix NSF link in footer.

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -28,7 +28,8 @@
                     <img src="/static/images/layout/nsf-logo.png"
                         alt="National Science Foundation" class="nsf-logo">
                     <p>The Go Botany project is supported in part by the 
-                        National Science Foundation.<br><a href="www.nsf.gov">www.nsf.gov</a></p>
+                        National Science Foundation.<br><a
+                            href="http://www.nsf.gov">www.nsf.gov</a></p>
                     <div class="clearit"></div>
                 </div>
 
