--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1670,6 +1670,8 @@ div.working-area #simple-slider .count {
     border-bottom: 1px solid #ad9f50;
     border-top: 1px solid #ad9f50;
     color: #000;
+    font-family: "Trebuchet MS", sans-serif;
+    font-size: 24px;
     margin-bottom: 0.5em;
     padding: 0.5em 0;
     text-align: center;
