--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -5,8 +5,7 @@
 
     <header>
         <div class="container">
-            <h2><a 
-                {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>New
+            <h2><a href="http://www.newenglandwild.org/">New
                 England Wild Flower Society</a></h2>
             <h1><a 
                 {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>Go
