--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -16,7 +16,8 @@
             <div class="container">
                 <div id="main">
                     <div class="dk-landing-section" style="margin: 0 50px 0 0;">
-                        <h4>Advanced Interactive Key to All 3500 New England Taxa</h4>
+                        <h4>Advanced Interactive Key to All 3500 New England
+                            Taxa (Coming Soon)</h4>
                         <section>
                             <ul>
                                 <li>This key covers all 3500 species,
