--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -27,7 +27,7 @@
             <li>Go Botany is designed for students and informal learners age 15 and older, from beginners to professionals. But educators can incorporate our tools into lessons for all ages! Develop your own curricula, lab modules, and field workshops using Go Botany. </li>
             <li>New England Wild Flower Society is teaming up with three partners, <a href="http://www.montshire.org" target="_blank">Montshire Museum of Science</a>, <a href="http://peabody.yale.edu" target="_blank">Yale Peabody Museum of Natural History</a>, and the <a href="http://www.chewonki.org" target="_blank">Chewonki Foundation</a> to create customized floras, educational displays, and teaching tools! </li>
             <li>Share your ideas with other educators using <a href="{% url plantshare-placeholder %}">PlantShare</a> and posting to our <a href="{% url teaching-tools-placeholder %}">Teachers Page</a>.</li>
-            <li>During 2012-2013, New England Wild Flower Society will offer free trainings for educators throughout New England on how to use Go Botany. <a href="#">Sign up!</a></li>
+            <li>During 2012-2013, New England Wild Flower Society will offer free trainings for educators throughout New England on how to use Go Botany.</li>
         </ul>
             
         <h3 class="about">Flora of New England</h3>
