--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -37,7 +37,10 @@
         <ul class="aboutlast">
                 <li>Go Botany is a four-year project funded by the <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0840186" target="_blank">National Science Foundation</a>. </li>
                 
-                <li> This web-based project builds on the Flora Novae-Angliae by Arthur Haines (forthcoming from <a href="http://yalepress.yale.edu/yupbooks/book.asp?isbn=9780300171549" target="_blank">Yale University Press</a>), the first comprehensive scientific reference on the region's plant species to be published in the last 25 years.</li>
+                <li> This web-based project builds on the Flora Novae-Angliae
+                by Arthur Haines (available at the <a
+                    href="http://www.newenglandwild.org/store/flora-novae-angliae"
+                    target="_blank">Garden Shop</a>), the first comprehensive scientific reference on the region's plant species to be published in the last 25 years.</li>
                 <li><a href="#">Watch a short video about this project.</a></li>
         </ul>
 
