--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -30,7 +30,7 @@
             <li>During 2012-2013, New England Wild Flower Society will offer free trainings for educators throughout New England on how to use Go Botany.</li>
         </ul>
             
-        <h3 class="about">Flora of New England</h3>
+        <h3 class="about">A New Flora for New England</h3>
         
         <img class="margin-bookcover" src="/static/images/layout/about_page_bookcover.jpg" alt="" />
             
