--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -18,7 +18,7 @@
                     <h2>Legal Information</h2>
                     <h3>Terms of Use</h3>
                     <ol class="terms">
-                      <li>Acceptance of Terms<br />
+                      <li id="acceptance">Acceptance of Terms<br />
                         <p>THESE TERMS AND CONDITIONS OF SERVICE (the "Terms")
                         are a legal and binding agreement between you and <a
                         href="http://newenglandwild.org">New England Wild
@@ -47,7 +47,7 @@
                         discontinue accessing and using the Site.</p>
                         <br />
                       </li>
-                      <li>Specific Terms<br />
+                      <li id="specific">Specific Terms<br />
                         <p>Any use of the Go Botany application, including use of the application through a third-party product that accesses Go Botany, is bound by terms of this agreement plus the following specific terms:</p>
                         <ul>
                             <li>You expressly understand and agree New England
@@ -87,7 +87,7 @@
                                 >{{ site_url }}</a>.</li>
                         </ul>
                       </li>
-                      <li>Intellectual Property Issues<br />
+                      <li id="ip">Intellectual Property Issues<br />
                         <p>The Site is owned by New England Wild Flower
                         Society.  All of the content featured or displayed on
                         the Site, including, but not limited to, still images,
@@ -130,7 +130,7 @@
                           submission.</li>
                         </ul>
                       </li>
-                      <li>Liability<br />
+                      <li id="liability">Liability<br />
                         <p>The Site and all material and information posted on
                         it is provided to you "as is" without any warranties.
                         You agree that you must evaluate and bear all risks
@@ -199,7 +199,7 @@
                         <p>You agree to assume full and sole responsibility for
                         any postings you make to the Site.</p><br />
                       </li>
-                      <li>Indemnification<br />
+                      <li id="indemnification">Indemnification<br />
                         <p>You agree to indemnify, defend, and hold harmless
                         New England Wild Flower Society; its affiliates and
                         partners; and their respective officers, directors,
@@ -215,7 +215,7 @@
                         Wild Flower Society in asserting and available
                         defenses.</p><br />
                       </li>
-                      <li>Privacy<br />
+                      <li id="privacy">Privacy<br />
                         <p>Go Botany is designed to gather and disseminate 
                         information about plant distribution and abundance 
                         across the six states of New England, USA, and 
