Closes issue #25 - change newfs.org links.

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -6,7 +6,7 @@
                     New England Wild Flower Society
                     or respective copyright holders.
                     All rights reserved.</p>
-                    <p><a href="http://www.newfs.org/">New England Wild
+                    <p><a href="http://www.newenglandwild.org/">New England Wild
                         Flower Society</a><br>
                     180 Hemenway Road, Framingham, MA 01701</p>
                 </div>
