--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -55,7 +55,7 @@
                                 illustrated.</li>
                             </ul>
                             <p>The key is based on the <a
-                                href="http://newfs.org/store/flora-novae-angliae"
+                                href="http://newenglandwild.org/store/flora-novae-angliae"
                                 target="_blank">Flora Novae Angliae</a> (Haines
                             2011).</p>
                         </section>
