--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -222,8 +222,9 @@
             </div>
 
             <div id="sidebar" style="height: 1116px">
-                <div class="section">
+                <div class="section map">
                     <h5>New England Distribution</h5>
+                    {% include "simplekey/_map_attribution.html" %}
                     <!--[if !IE]>-->
                     <object
                         data="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-ne-distribution-map.svg"
@@ -245,8 +246,9 @@
                     </object>
                 </div>
 
-                <div class="section namap">
+                <div class="section map namap">
                     <h5>North America Distribution</h5>
+                    {% include "simplekey/_map_attribution.html" %}
                     <div>
                         <object
                             data="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-na-distribution-map.svg"
