--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -37,7 +37,7 @@
         <ul class="aboutlast">
                 <li>Go Botany is a four-year project funded by the <a href="http://www.nsf.gov/awardsearch/showAward.do?AwardNumber=0840186" target="_blank">National Science Foundation</a>. </li>
                 
-                <li> This web-based project builds on the Flora Novae-Angliae
+                <li> This web-based project builds on the Flora Novae Angliae
                 by Arthur Haines (available at the <a
                     href="http://www.newenglandwild.org/store/flora-novae-angliae"
                     target="_blank">Garden Shop</a>), the first comprehensive scientific reference on the region's plant species to be published in the last 25 years.</li>
