Switch the Chrome Frame installer back to the overlay mode.
This is because inline mode appears underneath our image gallery, and
the overlay should work as well for our purposes now in that the user
still needs to activate it from the link in the message atop the page.

--- a/gobotany/simplekey/templates/simplekey/_chrome_frame.html
+++ b/gobotany/simplekey/templates/simplekey/_chrome_frame.html
@@ -8,7 +8,7 @@
             or <a href="http://www.apple.com/safari/">Safari</a>.</p>
             <p>
             To use the site with Internet Explorer, you'll need the
-            <strong><a href='javascript:CFInstall.check({destination:"http://{{ request.META.HTTP_HOST }}/"});' title='Install Google Chrome Frame'>Google
+            <strong><a href='javascript:CFInstall.check({mode:"overlay", destination:"http://{{ request.META.HTTP_HOST }}/"});' title='Install Google Chrome Frame'>Google
             Chrome Frame plug-in</a></strong>&#8212;a quick-and-easy
             one-time install.</p>
             <img src="/static/images/branding/logo-toplevel.png" alt="">
